Итерации 2-6: дашборд, агрегация, правила, тесты, замеры